# adventCode2025

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel
.github/workflows/: rust.yml
day1/: BUILD.bazel  Cargo.toml  README.md
day1/src/: main.rs
day2/: BUILD.bazel  Cargo.toml  README.md
day2/src/: main.rs
day3/: BUILD.bazel  Cargo.toml  README.md
day3/src/: main.rs
day4/: BUILD.bazel  Cargo.toml  README.md
day4/src/: main.rs
day5/: BUILD.bazel  Cargo.toml  README.md
day5/src/: main.rs
day6/: BUILD.bazel  Cargo.toml  README.md
day6/src/: main.rs
day7/: BUILD.bazel  Cargo.toml  README.md
day7/src/: main.rs
tools/: BUILD.bazel
