load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "day3",
    srcs = ["src/main.rs"],
    edition = "2024",
    deps = ["@day3_crates//:ureq"],
)

rust_test(
    name = "day3_test",
    srcs = ["src/main.rs"],
    edition = "2024",
    size = "small",
    timeout = "short",
    deps = ["@day3_crates//:ureq"],
)

sh_test(
    name = "day3_run",
    srcs = ["//tools:run_with_args.sh"],
    data = [":day3"],
    args = ["$(location :day3)"],
)
