load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "day5",
    srcs = ["src/main.rs"],
    edition = "2024",
    deps = [
        "@day5_crates//:ureq",
        "@day5_crates//:httparse",
    ],
)

rust_test(
    name = "day5_test",
    srcs = ["src/main.rs"],
    edition = "2024",
    size = "small",
    timeout = "short",
    deps = [
        "@day5_crates//:ureq",
        "@day5_crates//:httparse",
    ],
)

sh_test(
    name = "day5_run",
    srcs = ["//tools:run_with_args.sh"],
    data = [":day5"],
    args = ["$(location :day5)"],
)
